--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.py", "use": "@vercel/python" }
+    { 
+      "src": "app.py", 
+      "use": "@vercel/python",
+      "config": { 
+        "maxLambdaSize": "200mb" 
+      }
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "app.py" }
-  ]
+  ],
+  "env": {
+    "FLASK_ENV": "production"
+  }
 }
